# align-project-manager

./: .env.example  .env.local.example  .env.production.example  .gitignore  .vercelignore  BUSINESS_MODEL.md  CHANGELOG.md  CONTEXT HANDOFF.md  CONTRIBUTING.md  DEPLOYMENT.md  DESKTOP.md  GOOGLE_CALENDAR.md  GOOGLE_SIGN_IN.md  LICENSE  MAINTENANCE.md  NEXT CHAT HANDOFF.md  PRIVACY.md  README.md  RELEASE.md  ROADMAP.md  SECURITY.md  SECURITY_AUDIT.md  SELF_HOSTING.md  SELF_HOSTING_CHECKLIST.md  TEMPLATES.md  THREAT_MODEL.md  align-app-code-threat-model.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.json  vercel.json  vite.config.js  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
api/: _googleCalendar.js  _security.js  client-share.js  google-sync.js  google-todos.js  project-share.js
docs/: PROJECT_WORKSPACE_REFRESH.md  light-theme-token-export.css  quality-automation-report.md  release-candidate-checklist.md  security-optimization-audit-2026-06-05.md  security-optimization-audit-2026-06-13.md  ui-ux-refresh-report.md
public/: manifest.webmanifest  mobile-auth.html  sw.js
scripts/: check-public-release-env.mjs
src/: main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/linux/: align.desktop.template
src-tauri/src/: lib.rs  main.rs
supabase/: client-share-links.sql  collaboration-assignee-cleanup.sql  email-preferences.sql  email-reminders.sql  feature-access.sql  google-calendar.sql  google-tasks-bridge.sql  google-todos-sync.sql  grants.sql  hub-notes-project-links.sql  hub-palettes.sql  personal-hub.sql  planned-month.sql  planned-week-start.sql  project-areas.sql  project-collaboration.sql  project-notes.sql  (+17 more)
(+184 files in other folders)
