[package]
name = "align"
version = "0.1.0"
description = "Align project management desktop app"
authors = ["Sharoz Ijaz"]
license = ""
repository = "https://github.com/sharozijaz/align-project-manager"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "align_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.0" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.0" }
tauri-plugin-log = "2"
